--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav>
-  <h1>Game Inventory App</h1>
+  <h1><a href="/">Game Inventory App</a></h1>
   <a href="/games">Games</a>
   <a href="/games/new">Create New Game</a>
 </nav>
