--- a/src/views/games.ejs
+++ b/src/views/games.ejs
@@ -36,6 +36,10 @@
             game.developerid)?.name || "None" %>
           </p>
           <p>
+            Company: <%= locals.developers.find(developer => developer.id ===
+            game.developerid)?.company || "None" %>
+          </p>
+          <p>
             Genre: <%= locals.genres.find(genre => genre.id ===
             game.genreid)?.name || "None" %>
           </p>
