--- a/src/views/gamesForm.ejs
+++ b/src/views/gamesForm.ejs
@@ -6,7 +6,7 @@
     <title>Inventory App</title>
   </head>
   <body>
-    <%- include('partials/navbar') %>
+    <%- include('partials/navbar') %> <%- include('partials/errors') %>
     <form action="/games/new" method="post">
       <label for="name">Name</label>
       <input type="text" name="name" id="name" required />
@@ -19,7 +19,7 @@
       <label for="developer">Developer</label>
       <input type="text" name="developer" id="developer" required />
       <label for="company">Company</label>
-      <input type="text" name="company" id="company" required />
+      <input type="text" name="company" id="company" />
       <label for="admin">Admin Password</label>
       <input type="text" name="admin" id="admin" required />
       <button type="submit">Submit</button>
