feat(games): add delete function

--- a/src/views/games.ejs
+++ b/src/views/games.ejs
@@ -43,6 +43,9 @@
             Genre: <%= locals.genres.find(genre => genre.id ===
             game.genreid)?.name || "None" %>
           </p>
+          <form action="/games/delete" method="get">
+            <button type="submit" name="<%= game.id %>">Delete</button>
+          </form>
         </div>
         <% }) %>
       </section>
