fix: admin pass field type=password

--- a/src/views/gamesForm.ejs
+++ b/src/views/gamesForm.ejs
@@ -21,7 +21,7 @@
       <label for="company">Company</label>
       <input type="text" name="company" id="company" />
       <label for="admin">Admin Password</label>
-      <input type="text" name="admin" id="admin" required />
+      <input type="password" name="admin" id="admin" required />
       <button type="submit">Submit</button>
     </form>
   </body>
