--- a/src/views/gamesDeleteForm.ejs
+++ b/src/views/gamesDeleteForm.ejs
@@ -9,7 +9,7 @@
     <%- include('partials/navbar') %> <%- include('partials/errors') %>
     <form action="/games/delete" method="post">
       <label for="admin">Admin Password:</label>
-      <input type="text" name="admin" required />
+      <input type="password" name="admin" required />
       <button type="submit" name="<%=locals.id%>">Delete</button>
     </form>
   </body>
