--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,5 +1,7 @@
 <nav>
-  <h1><a href="/">Game Inventory App</a></h1>
-  <a href="/games">Games</a>
-  <a href="/games/new">Create New Game</a>
+  <h1><a href="/" id="home">Game Inventory App</a></h1>
+  <div class="links">
+    <a href="/games">Games</a>
+    <a href="/games/new">Create New Game</a>
+  </div>
 </nav>
