--- a/src/views/gamesDeleteForm.ejs
+++ b/src/views/gamesDeleteForm.ejs
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inventory App</title>
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <%- include('partials/navbar') %> <%- include('partials/errors') %>
-    <form action="/games/delete" method="post">
+    <form action="/games/delete" method="post" class="input-form">
       <label for="admin">Admin Password:</label>
       <input type="password" name="admin" required />
       <button type="submit" name="<%=locals.id%>">Delete</button>
