--- a/src/views/gamesForm.ejs
+++ b/src/views/gamesForm.ejs
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inventory App</title>
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <%- include('partials/navbar') %> <%- include('partials/errors') %>
-    <form action="/games/new" method="post">
+    <form action="/games/new" method="post" class="input-form">
       <label for="name">Name</label>
       <input type="text" name="name" id="name" required />
       <label for="genre">Genre</label>
