--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -198,3 +198,19 @@ input:-webkit-autofill:active {
 .errors li {
   color: rgb(251, 44, 54);
 }
+
+@media (max-width: 600px) {
+  nav {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  header p {
+    max-width: 80%;
+  }
+  header h1 {
+    text-align: center;
+  }
+  .games-page {
+    flex-direction: column;
+  }
+}
